# web-top

./: .gitignore  Cargo.toml  Makefile  README.md
!/.claude-rrajivram/: .claude.json
!/.claude-rrajivram/backups/: .claude.json.backup.1777225078110
.beads/: metadata.json
crates/backend/: Cargo.toml
crates/backend/src/: gpu.rs  main.rs
crates/frontend/: Cargo.toml  index.html
crates/frontend/src/: main.rs
crates/shared/src/: lib.rs
