[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web-top"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde_json = "1"
shared = { path = "../shared" }
sysinfo = "0.33"
libc = "0.2"
